--- a/AbstraxArtStore/Views/Shared/_Layout.cshtml
+++ b/AbstraxArtStore/Views/Shared/_Layout.cshtml
@@ -13,16 +13,6 @@
 
 <body>
     <header>
-        <div style="width: 100%" class="container">
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <form>
-        <div class="search">
-            <span class="search-icon material-symbols-outlined">search</span>
-            <input class="search-input" type="search" placeholder="Search"
-        </div>
-    </form>
-</div>
 
 
 
@@ -40,21 +30,10 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>    
                         </li>
                    
+                       
                         <li class="nav-item">
-                            <div class="dropdown">
-                                <ul class="navbar-nav flex-grow-1">
-                                    <button type="button" class="btn btn dropdown-toggle text-light" data-bs-toggle="dropdown">
-                                        Buy
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="">All Paintings</a></li>
-                                        <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="">Small Paintings</a></li>
-                                        <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="">Medium Paintings</a></li>
-                                        <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="">Large Paintings</a></li>
-
-                                    </ul>
-                            </div>
-                        </li>                       
+                            <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="">Products</a>
+                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Orders" asp-action="">Orders</a>
