--- a/AbstraxArtStore/wwwroot/css/site.css
+++ b/AbstraxArtStore/wwwroot/css/site.css
@@ -23,123 +23,114 @@ body {
 
 }
 
-.container {
-    padding: 2rem;
-}
 
 
 
 
 
-
-
-.search {
-    --padding: 14px;
-    width: max-content;
-    display: flex;
-    align-items: center;
-    padding: var(--padding);
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 28px;
-    background:#f6f6f6;
-    width: 1275px;
-
-}
-
-
-.search-input {
-    font-size: 16px;
-    font-family: 'lexend', sans-serif;
-    color:#333333;
-    margin-left: var(--padding);
-    outline: none;
-    border: none;
-    background: transparent;
-    width: 300px;
-}
-
-
-
-
-
-
-
-
-.slider-wrapper {
-    position: relative;
-    max-width: 70rem;
-    margin: 0 auto;
-}
 
 .slider {
-    display: flex;
-    aspect-ratio: 16/ 9;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
-    border-radius: 0.5rem;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    width: 800px;
+    max-width: 100vw;
+    height: 700px;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
 }
 
-    .slider::-webkit-scrollbar {
-        display: none;
+    .slider .list {
+        position: absolute;
+        width: max-content;
+        height: 100%;
+        left: 0;
+        top: 0;
+        display: flex;
+        transition: 1s;
     }
 
-    .slider img {
-        flex: 1 0 100%;
-        scroll-snap-align: start;
-        object-fit: cover;
-    }
-
-.slider-nav {
-    display: flex;
-    column-gap: 1rem;
-    position: absolute;
-    bottom: 1.25rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-}
-
-    .slider-nav a {
-        width: 0.5rem;
-        height: 0.5rem;
-        border-radius: 50%;
-        background-color: #fff;
-        opacity: 0.75;
-        transition: opacity ease 250ms;
-    }
-
-        .slider-nav a:hover {
-            opacity: 1;
+        .slider .list img {
+            width: 1300px;
+            max-width: 100vw;
+            height: 100%;
+            object-fit: cover;
         }
 
+    .slider .buttons {
+        position: absolute;
+        top: 45%;
+        left: 5%;
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+        .slider .buttons button {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: #fff5;
+            color: #fff;
+            border: none;
+            font-family: monospace;
+            font-weight: bold;
+        }
+
+    .slider .dots {
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        color: #fff;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+        .slider .dots li {
+            list-style: none;
+            width: 10px;
+            height: 10px;
+            background-color: #fff;
+            margin: 10px;
+            border-radius: 20px;
+            transition: 0.5s;
+        }
+
+            .slider .dots li.active {
+                width: 30px;
+            }
 
 
 
-
-
-
-
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 15px;
+@media screen and (max-width: 768px) {
+    .slider {
+        height: 400px;
+    }
 }
 
-.row::after {
-    content: "";
-    display: table;
-    clear: both;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width:600px) {
     .column {
         width: 100%;
     }
+
+
 
 .footer {
         background-color: white;
@@ -148,73 +139,7 @@ body {
     }
 
 
-
-
-
-
-
-    div.gallery {
-        border: 1px solid #ccc;
-    }
-
-        div.gallery:hover {
-            border: 1px solid #777;
-        }
-
-        div.gallery img {
-            width: 100%;
-            height: auto;
-        }
-
-    div.desc {
-        padding: 15px;
-        text-align: center;
-    }
-
-    * {
-        box-sizing: border-box;
-    }
-
-    .responsive {
-        padding: 0 6px;
-        float: left;
-        width: 24.99999%;
-    }
-
-    @media only screen and (max-width: 700px) {
-        .responsive {
-            width: 49.99999%;
-            margin: 6px 0;
-        }
-    }
-
-    @media only screen and (max-width: 500px) {
-        .responsive {
-            width: 100%;
-        }
-    }
-
-    .clearfix:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    #form-wrapper {
+ #form-wrapper {
         background-color: white;
         margin: auto;
         margin-top: 100px;
@@ -232,7 +157,7 @@ body {
     }
 
     h1 {
-        color: white;
+        color: black;
     }
     
     h5 {
