--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -1,41 +1,62 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<h1>@ViewData["Title"]</h1>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-<body>
-
-    <div class="slider">
-        <div class="list">
-            <div class="item">
-                <img src="/lib/images/photo-1586023492125-27b2c045efd7.png" alt="">
-            </div>
-            <div class="item">
-                <img src="/lib/images/Couch.png" alt="">
-            </div>
-            <div class="item">
-                <img src="/lib/images/Couch2.png" alt="">
-            </div>
-        </div>
-        <div class="buttons">
-            <button id="prev"><</button>
-            <button id="next">></button>
-        </div>
-        <ul class="dots">
-            <li class="active"></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
-    </div>
-
-    <script src="app.js"></script>
+<body class="homepagebg">
+    <!-- Content for the special page -->
 </body>
 
+<section class="container">
+    <div class="slider-wrapper">
+        <div class="slider">
+            <img id="slide-1" src="~/lib/images/photo-1586023492125-27b2c045efd7.png" alt="slide 1" style="width:1200px;height:650px;" />
+            <img id="slide-2" src="/lib/images/Couch.png" alt="slide 2" style="width:1200px;height:650px;" />
+            <img id="slide-3" src="/lib/images/Couch2.png" alt="slide 3" style="width:1200px;height:650px;" />
+        </div>
+        <div class="slider-nav">
+            <a href="#slide-1"></a>
+            <a href="#slide-2"></a>
+            <a href="#slide-3"></a>
+        </div>
 
 
+</section>
 
 
+<div class="row">
+    <div class="column">
+        <a href="Home/Smallpaintings">
+            <img src="/lib/images/Bird.png" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Smallpaintings">
+                <h2 style="color:black;">Small Paintings</h2>
+            </a>
+
+    </div>
+
+
+    <div class="column">
+        <a href="Home/Mediumpaintings">
+            <img src="/lib/images/Leaf.png" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Mediumpaintings">
+                <h2 style="color:black;">Medium Paintings</h2>
+            </a>
+
+    </div>
+
+    <div class="column">
+        <a href="Home/Largepaintings">
+            <img src="~/lib/images/Cactus.png" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Largepaintings">
+                <h2 style="color:black;">Large Paintings</h2>
+            </a>
+
+    </div>
+
+
+</div>
