--- a/AbstraxArtStore/wwwroot/css/site.css
+++ b/AbstraxArtStore/wwwroot/css/site.css
@@ -18,97 +18,72 @@ html {
 }
 
 
+.homepagebg {
+    background-image: none; /* Remove the background image */
+    background-color: lightgray; /* Replace with your desired color */
+}
+
+
 body {
     margin-bottom: 60px;
-
+    background-color: lightgray;
+    height: 100vh
+    color: white;
 }
 
 
 
 
-
-
+.slider-wrapper {
+    position: relative;
+    max-width: 70rem;
+    margin: 0 auto;
+}
 
 .slider {
-    width: 800px;
-    max-width: 100vw;
-    height: 700px;
-    margin: auto;
-    position: relative;
-    overflow: hidden;
+    display: flex;
+    aspect-ratio: 16/ 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
-    .slider .list {
-        position: absolute;
-        width: max-content;
-        height: 100%;
-        left: 0;
-        top: 0;
-        display: flex;
-        transition: 1s;
+    .slider::-webkit-scrollbar {
+        display: none;
     }
 
-        .slider .list img {
-            width: 1300px;
-            max-width: 100vw;
-            height: 100%;
-            object-fit: cover;
-        }
-
-    .slider .buttons {
-        position: absolute;
-        top: 45%;
-        left: 5%;
-        width: 90%;
-        display: flex;
-        justify-content: space-between;
+    .slider img {
+        flex: 1 0 100%;
+        scroll-snap-align: start;
+        object-fit: cover;
     }
 
-        .slider .buttons button {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            background-color: #fff5;
-            color: #fff;
-            border: none;
-            font-family: monospace;
-            font-weight: bold;
-        }
-
-    .slider .dots {
-        position: absolute;
-        bottom: 10px;
-        left: 0;
-        color: #fff;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-    }
-
-        .slider .dots li {
-            list-style: none;
-            width: 10px;
-            height: 10px;
-            background-color: #fff;
-            margin: 10px;
-            border-radius: 20px;
-            transition: 0.5s;
-        }
-
-            .slider .dots li.active {
-                width: 30px;
-            }
-
-
-
-@media screen and (max-width: 768px) {
-    .slider {
-        height: 400px;
-    }
+.slider-nav {
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
 }
 
+    .slider-nav a {
+        width: 0.5rem;
+        height: 0.5rem;
+        border-radius: 50%;
+        background-color: #fff;
+        opacity: 0.75;
+        transition: opacity ease 250ms;
+    }
+
+        .slider-nav a:hover {
+            opacity: 1;
+        }
 
 
 
@@ -117,13 +92,17 @@ body {
 
 
 
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 15px;
+}
 
-
-
-
-
-
-
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 @media screen and (max-width:600px) {
     .column {
@@ -132,14 +111,23 @@ body {
 
 
 
-.footer {
-        background-color: white;
+
+
+
+
+
+
+
+
+
+    .footer {
+        background-color: black;
         text-align: center;
         padding: 10px;
     }
 
 
- #form-wrapper {
+    #form-wrapper {
         background-color: white;
         margin: auto;
         margin-top: 100px;
@@ -159,7 +147,7 @@ body {
     h1 {
         color: black;
     }
-    
+
     h5 {
         color: white;
     }
@@ -178,8 +166,4 @@ body {
 
     button {
         background-color: white !important;
-    }
-
-    select {
-        display: inline;
     }
