--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
         <a href="Home/Smallpaintings">
             <img src="/lib/images/Bird.png" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Smallpaintings">
-                <h2 style="color:black;">Small Paintings</h2>
+                <h2 style="color:black;"></h2>
             </a>
 
     </div>
