--- a/AbstraxArtStore/Views/Products/Details.cshtml
+++ b/AbstraxArtStore/Views/Products/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImageName)
         </dd>
+        <dt class="col-sm-2">
+            Image
+        </dt>
+        <dd class="col-sm-10">
+            <img src="@("~/Lib/images/"+Model.ImageName)" asp-append-version="true" width="250px" height="250px" />
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductPrice)
         </dt>
