--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -12,6 +12,14 @@
     <!-- Content for the special page -->
 </body>
 
+<section class="LearnMore"> 
+    <div class="content"> 
+        <h1>Welcome to Abstrax Art</h1>
+        <p>Explore the world of art and creativity</p> 
+        <a class="cta-button" asp-area="" asp-controller="Home" asp-action="About">Learn More</a> 
+    </div> 
+</section>
+
 <section class="container">
     <div class="slider-wrapper">
         <div class="slider">
