Sort, Filter and Search Redone. Authorization adjustments made.

--- a/AbstraxArtStore/Views/Home/About.cshtml
+++ b/AbstraxArtStore/Views/Home/About.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container.sm p-5 my-5 border     col-md-4 rounded">
         <h1>Who Are We</h1>
-    <p>We are Abstrax Art. A brand striving to promote amazing artwork online for everyone to benefit from. Buy beautiful artwork from a range of talented artists or become the talented artist yourself and sell your own.</p>
+    <p>We are Abstrax Art, a brand striving to promote amazing artwork online for everyone to benefit from. Buy beautiful artwork from a range of talented artists or become the talented artist yourself and sell your own.</p>
     </div>
 
     <div class="container.sm p-5 my-5 border col-md-4 rounded">
