--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +17,7 @@
     <div class="content"> 
         <h1>Welcome to Abstrax Art</h1>
         <p>Explore the world of art and creativity</p> 
-        <a class="cta-button" asp-area="" asp-controller="Home" asp-action="About">Learn More</a> 
+        <a class="button rounded" asp-area="" asp-controller="Home" asp-action="About">Learn More</a> 
     </div> 
 </section>
 
@@ -42,7 +43,7 @@
         <a href="Home/Smallpaintings">
             <img src="/lib/images/Bird.png" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Smallpaintings">
-                <h2 style="color:black;"></h2>
+                <h2 style="color:white;">Small Paintings</h2>
             </a>
 
     </div>
@@ -52,7 +53,7 @@
         <a href="Home/Mediumpaintings">
             <img src="/lib/images/Leaf.png" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Mediumpaintings">
-                <h2 style="color:black;">Medium Paintings</h2>
+                <h2 style="color:white;">Medium Paintings</h2>
             </a>
 
     </div>
@@ -61,7 +62,7 @@
         <a href="Home/Largepaintings">
             <img src="~/lib/images/Cactus.png" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Largepaintings">
-                <h2 style="color:black;">Large Paintings</h2>
+                <h2 style="color:white;">Large Paintings</h2>
             </a>
 
     </div>
