--- a/AbstraxArtStore/Views/Home/Contact.cshtml
+++ b/AbstraxArtStore/Views/Home/Contact.cshtml
@@ -54,10 +54,10 @@
     <div class="container">
         <form action="/action_page.php">
             <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            <input type="text" id="fname" name="firstname" placeholder="Your name...">
 
             <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <input type="text" id="lname" name="lastname" placeholder="Your last name...">
 
             <label for="country">City</label>
             <select id="city" name="city">
@@ -67,6 +67,7 @@
                 <option value="hamilton">Hamilton</option>
                 <option value="dunedin">Dunedin</option>
                 <option value="rotorua">Rotorua</option>
+                <option value="other">Other</option>
             </select>
 
             <label for="subject">Subject</label>
