--- a/AbstraxArtStore/Views/Payments/Index.cshtml
+++ b/AbstraxArtStore/Views/Payments/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<AbstraxArtStore.Models.Payment>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Transcations";
 }
 
-<h1>Index</h1>
+<h1>Transcations</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
