--- a/AbstraxArtStore/Views/Products/Index.cshtml
+++ b/AbstraxArtStore/Views/Products/Index.cshtml
@@ -1,31 +1,45 @@
-﻿@model IEnumerable<AbstraxArtStore.Models.Product>
+﻿@model PaginatedList<AbstraxArtStore.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Products";
 }
 
-<h1>Index</h1>
+<h1>Products</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
+
+    <form asp-action="Index" method="get">
+        <div class="form-actions no-color">
+            <p>
+                Find by name: <input type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+                <input type="submit" value="Search" class="btn btn-default" /> |
+                <a asp-action="Index">Back to Full List</a>
+            </p>
+        </div>
+    </form>
+
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ProductName)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Product Name</a>
+
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageName)
+                Image Name
+            </th>
+
+            <th>
+                Product Price
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductPrice)
+                <a asp-action="Index" asp-route-sortOrder="@ViewData["productdescSortParm"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">Product Description</a>
+
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ProductDesc)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
+                Category
             </th>
             <th></th>
         </tr>
@@ -57,3 +71,23 @@
 }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
