Front page adjustments

--- a/AbstraxArtStore/Views/Home/Index.cshtml
+++ b/AbstraxArtStore/Views/Home/Index.cshtml
@@ -38,34 +38,34 @@
 </section>
 
 
-<div class="row">
-    <div class="column">
-        <a href="Home/Smallpaintings">
-            <img src="/lib/images/Bird.png" alt="Small Paintings" class="rounded" style="width:400px;height:400px;">
-            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Smallpaintings">
-                <h2 style="color:white;">Small Paintings</h2>
+
+
+
+
+    <div class="row">
+        <div class="column">
+            <a href="Home/Smallpaintings">
+                <img src="/lib/images/Living Room 6.jpeg" alt="Small Paintings">
             </a>
+        <h2 class="Column-Heading">About Us</h2>
 
-    </div>
+        </div>
 
-
-    <div class="column">
-        <a href="Home/Mediumpaintings">
-            <img src="/lib/images/Leaf.png" alt="Medium Paintings" class="rounded" style="width:400px;height:400px;">
-            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Mediumpaintings">
-                <h2 style="color:white;">Medium Paintings</h2>
+        <div class="column">
+            <a href="Home/Mediumpaintings">
+                <img src="/lib/images/Office 2.jpeg" alt="Medium Paintings">
             </a>
+        <h2 class="Column-Heading">All Products</h2>
 
-    </div>
+        </div>
 
-    <div class="column">
-        <a href="Home/Largepaintings">
-            <img src="~/lib/images/Cactus.png" alt="Large Paintings" class="rounded" style="width:400px;height:400px;">
-            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Largepaintings">
-                <h2 style="color:white;">Large Paintings</h2>
+        <div class="column">
+            <a href="Home/Largepaintings">
+                <img src="/lib/images/Office 1.jpeg" alt="Large Paintings">
             </a>
+        <h2 class="Column-Heading">Contact Us</h2>
 
+        </div>
     </div>
-
 
 </div>
