--- a/AbstraxArtStore/wwwroot/css/site.css
+++ b/AbstraxArtStore/wwwroot/css/site.css
@@ -85,24 +85,35 @@ body {
 
 
 
+
+
+body {
+    background-color: #f8fafc;
+}
+
+.container {
+    padding: 2rem;
+}
+
 .slider-wrapper {
     position: relative;
-    max-width: 70rem;
+    max-width: 48rem;
     margin: 0 auto;
 }
 
 .slider {
     display: flex;
-    aspect-ratio: 16/ 9;
+    aspect-ratio: 16 / 9;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
     border-radius: 0.5rem;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    -ms-overflow-style: none; /* Hide scrollbar IE and Edge */
+    scrollbar-width: none; /* Hide scrollbar Firefox */
 }
 
+    /* Hide scrollbar for Chrome, Safari and Opera */
     .slider::-webkit-scrollbar {
         display: none;
     }
@@ -144,10 +155,22 @@ body {
 
 
 .column {
+    margin-top: 50px; /* Adjust the margin size as needed */
     float: left;
     width: 33.33%;
     padding: 15px;
+    text-align: center;
+
 }
+
+    .column img {
+        width: 100%;
+        height: auto;
+        max-height: 600px; /* Make it a rectangular portrait shape */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Shadow for the minimalistic effect */
+        border-radius: 20px; /* Optional: Gives rounded corners */
+
+    }
 
 .row::after {
     content: "";
@@ -155,11 +178,34 @@ body {
     clear: both;
 }
 
-@media screen and (max-width:768px) {
+h2 {
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 15px;
+}
+
+@media screen and (max-width: 768px) {
     .column {
         width: 100%;
     }
+}
 
+
+
+.Column-Heading {
+    text-align: center; /* Center the text */
+    font-size: 40px;
+    font-family: "Lucida Console", monospace;
+    color: white; /* Change text color as needed */
+    margin-top: 10px; /* Space between image and text */
+}
+
+/* Responsive Font Size */
+@media screen and (max-width: 768px) {
+    .image-title {
+        font-size: 1rem; /* Smaller font size for smaller screens */
+    }
+}
 
 
 
@@ -195,7 +241,7 @@ body {
     }
 
     h1 {
-        color: white;
+        color: black;
     }
 
     h5 {
